the basic direction now works..after failing quite a lot with the whole math behind it, still some funky kinks here

--- a/index.html
+++ b/index.html
@@ -11,11 +11,12 @@
                 <div id="resting_place" class="resting">
                     <div class="dummyBlock">
                         <div class="target_grid" id="design_grid">
-                            <div id="target_area_default" class="target_field" style="grid-area: 1 / 1 / 1 / 1;"></div>
+                            <div id="target_area_default" class="target_field" style="grid-area: 2 / 2 / 2 / 2;"></div>
                         </div>
                     </div>
                 </div>
-                <div id="notice_area">Offset</div>
+                <div id="notice_area">notice_area</div>
+                <div id="info_area">info_area</div>
                  <div id="grid_place" class="grid">
                     <div class="outer_box">
                         <div class="corner_lt"></div>
