--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                         <div class="border_t"></div>
                         <div class="corner_rt"></div>
                         <div class="border_l"></div>
-                        <div class="content_box">Sternstraße 3</div>
+                        <div class="content_box">Zum Geldspeicher 3</div>
                         <div class="border_r"></div>
                         <div class="corner_lb"></div>
                         <div class="border_b"></div>
@@ -35,7 +35,7 @@
                         <div class="border_t"></div>
                         <div class="corner_rt"></div>
                         <div class="border_l"></div>
-                        <div class="content_box">04109 Leipzig</div>
+                        <div class="content_box">9212 Entenhausen</div>
                         <div class="border_r"></div>
                         <div class="corner_lb"></div>
                         <div class="border_b"></div>
@@ -47,7 +47,7 @@
                         <div class="border_t"></div>
                         <div class="corner_rt"></div>
                         <div class="border_l"></div>
-                        <div class="content_box">03432 32232</div>
+                        <div class="content_box">120 8342 9142</div>
                         <div class="border_r"></div>
                         <div class="corner_lb"></div>
                         <div class="border_b"></div>
@@ -59,7 +59,7 @@
                         <div class="border_t"></div>
                         <div class="corner_rt"></div>
                         <div class="border_l"></div>
-                        <div class="content_box">contact@ub.uni-leipzig.de</div>
+                        <div class="content_box">mailAdress@contoso.com</div>
                         <div class="border_r"></div>
                         <div class="corner_lb"></div>
                         <div class="border_b"></div>
