corrected page scroll offset, added some convience for drag box spawning

--- a/index.html
+++ b/index.html
@@ -18,57 +18,18 @@
                 <div id="notice_area">notice_area</div>
                 <div id="info_area">info_area</div>
                  <div id="grid_place" class="grid">
-                    <div class="outer_box">
-                        <div class="corner_lt"></div>
-                        <div class="border_t"></div>
-                        <div class="corner_rt"></div>
-                        <div class="border_l"></div>
-                        <div class="content_box">Zum Geldspeicher 3</div>
-                        <div class="border_r"></div>
-                        <div class="corner_lb"></div>
-                        <div class="border_b"></div>
-                        <div class="corner_rb"></div>
-                    </div>
+                    <div class="outer_box">Zum Geldspeicher 3</div>
 
-                    <div class="outer_box">
-                        <div class="corner_lt"></div>
-                        <div class="border_t"></div>
-                        <div class="corner_rt"></div>
-                        <div class="border_l"></div>
-                        <div class="content_box">9212 Entenhausen</div>
-                        <div class="border_r"></div>
-                        <div class="corner_lb"></div>
-                        <div class="border_b"></div>
-                        <div class="corner_rb"></div>
-                    </div>
+                    <div class="outer_box">9212 Entenhausen</div>
 
-                    <div class="outer_box">
-                        <div class="corner_lt"></div>
-                        <div class="border_t"></div>
-                        <div class="corner_rt"></div>
-                        <div class="border_l"></div>
-                        <div class="content_box">120 8342 9142</div>
-                        <div class="border_r"></div>
-                        <div class="corner_lb"></div>
-                        <div class="border_b"></div>
-                        <div class="corner_rb"></div>
-                    </div>
+                    <div class="outer_box">120 8342 9142</div>
 
-                    <div class="outer_box">
-                        <div class="corner_lt"></div>
-                        <div class="border_t"></div>
-                        <div class="corner_rt"></div>
-                        <div class="border_l"></div>
-                        <div class="content_box">mailAdress@contoso.com</div>
-                        <div class="border_r"></div>
-                        <div class="corner_lb"></div>
-                        <div class="border_b"></div>
-                        <div class="corner_rb"></div>
-                    </div>
+                    <div class="outer_box">mailAdress@contoso.com</div>
                     
                  </div>
              </div>
          </div>
          <h2 id="position_thingy"><em>This is empty</em></h2>
+         <!--<div style="background: red; position: absolute; left: 0; top:0; width:3px;height:3px;" id="roterPunkt"></div>-->
      </body>
  </html>
