added placeholders, fixed a problem with the grid layout

--- a/index.html
+++ b/index.html
@@ -11,13 +11,16 @@
                 <div id="resting_place" class="resting">
                     <div class="dummyBlock">
                         <div class="target_grid" id="design_grid">
-                            <div id="target_area_default" class="target_field" style="grid-area: 2 / 2 / 2 / 2;"></div>
+                            <div id="target_area_default" class="target_field" style="grid-area: 2 / 2 / 3 / 3;"></div>
                         </div>
                     </div>
                 </div>
                 <div id="notice_area">notice_area</div>
                 <div id="info_area">info_area</div>
                  <div id="grid_place" class="grid">
+
+                    <div class="outer_box"><b>Onkel Dagoberts Geldspeicher</b></div>
+
                     <div class="outer_box">Zum Geldspeicher 3</div>
 
                     <div class="outer_box">9212 Entenhausen</div>
@@ -25,6 +28,8 @@
                     <div class="outer_box">120 8342 9142</div>
 
                     <div class="outer_box">mailAdress@contoso.com</div>
+
+                    <div class="outer_box placeholder">Platzhalter</div>
                     
                  </div>
              </div>
