added adjustable dimensions for target_field and scaling throught the code

--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
          <link rel="stylesheet" href="./basic.css">
      </head>
      <body>
-         <div class="main" id="staging">
+         <div class="main" id="tou_layouter">
              <h1>Javascript Snatch to things</h1>
              <h2>Items in Grid</h2>
-             <div id="resting_place" class="resting">
+             <div id="tou_assembly" class="tou_assembly">
                 <form name="editCollectioNRearrange" action="/typo3/index.php?M=web_SparqlToucanSparqlbackend&amp;moduleToken=0ec75c53601a4720fcc585df1e698a2eb48f2f24&amp;tx_sparqltoucan_web_sparqltoucansparqlbackend%5Baction%5D=editCollectionRearrange&amp;tx_sparqltoucan_web_sparqltoucansparqlbackend%5Bcontroller%5D=Backend" method="post">
                     <input type="hidden" name="tx_sparqltoucan_web_sparqltoucansparqlbackend[__referrer][@extension]" value="SparqlToucan">
                     <input type="hidden" name="tx_sparqltoucan_web_sparqltoucansparqlbackend[__referrer][@vendor]" value="Ubl">
@@ -17,8 +17,8 @@
                     <input type="hidden" name="tx_sparqltoucan_web_sparqltoucansparqlbackend[__referrer][arguments]" value="YTozOntzOjEwOiJjb2xsZWN0aW9uIjtzOjE6IjYiO3M6NjoiYWN0aW9uIjtzOjI3OiJlZGl0Q29sbGVjdGlvbkR5bmFtaWNMYXlvdXQiO3M6MTA6ImNvbnRyb2xsZXIiO3M6NzoiQmFja2VuZCI7fQ==6520fa55244e4e29c8a3d12d242682139642b113">
                     <input type="hidden" name="tx_sparqltoucan_web_sparqltoucansparqlbackend[__referrer][@request]" value="a:4:{s:10:&quot;@extension&quot;;s:12:&quot;SparqlToucan&quot;;s:11:&quot;@controller&quot;;s:7:&quot;Backend&quot;;s:7:&quot;@action&quot;;s:27:&quot;editCollectionDynamicLayout&quot;;s:7:&quot;@vendor&quot;;s:3:&quot;Ubl&quot;;}b2dae0416e7026cd4832d4cb2f7426e270cf776f">
                     <input type="hidden" name="tx_sparqltoucan_web_sparqltoucansparqlbackend[__trustedProperties]" value="a:1:{s:23:&quot;editCollectioNRearrange&quot;;a:7:{i:24;i:1;i:25;i:1;i:26;i:1;i:27;i:1;i:28;i:1;i:29;i:1;i:38;i:1;}}fc68c3b8666ba1a6805a4e6335870f0adbe9ed0c">
-                    <div class="dummyBlock">
-                        <div class="target_grid" id="design_grid">
+                    <div class="tou_spaceblock">
+                        <div class="tou_bench" id="tou_bench">
                             <div style="grid-area: 1    /   1   /  2  / 3">Bibliothek Klassische Archäologie und Ur- und Frühgeschichte
                                 <em>Bibo Label 1</em>
                                 <input type="hidden" name="tx_sparqltoucan_web_sparqltoucansparqlbackend[editCollectioNRearrange][24]" value="1    /   1   /  2  / 3">
@@ -56,8 +56,8 @@
             <h2>Items without Grid</h2>
                 <!--Area without grid interaction-->
                 <div class="tx_sparqltoucan_layouter_free">
-                    <div id="grid_place" class="grid">
-                        <div class="outer_box">Geldspeicher Str. 12
+                    <div id="tou_warehouse" class="tou_warehouse">
+                        <div class="tou_containment">Geldspeicher Str. 12
                             <em>&gt;&gt; ma.org/streetAddress</em>
                             <input type="hidden" name="tx_sparqltoucan_web_sparqltoucansparqlbackend[editCollectioNRearrange][27]" value="2    /   1   /  3  / 3">
                         </div>
