--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
              <h1>Javascript Snatch to things</h1>
              <h2>Items in Grid</h2>
              <div id="tou_assembly" class="tou_assembly">
-                <form name="editCollectioNRearrange" action="/typo3/index.php?M=web_SparqlToucanSparqlbackend&amp;moduleToken=0ec75c53601a4720fcc585df1e698a2eb48f2f24&amp;tx_sparqltoucan_web_sparqltoucansparqlbackend%5Baction%5D=editCollectionRearrange&amp;tx_sparqltoucan_web_sparqltoucansparqlbackend%5Bcontroller%5D=Backend" method="post">
+                <form name="editCollectioNRearrange" action="/typo3/index.php?M=web_SparqlToucanSparqlbackend&amp;moduleToken=0ec75c53601a4720fcc585df1e698a2eb48f2f24&amp;tx_sparqltoucan_web_sparqltoucansparqlbackend%5Baction%5D=editCollectionRearrange&amp;tx_sparqltoucan_web_sparqltoucansparqlbackend%5Bcontroller%5D=Backend" method="post" id="tou_form">
                     <input type="hidden" name="tx_sparqltoucan_web_sparqltoucansparqlbackend[__referrer][@extension]" value="SparqlToucan">
                     <input type="hidden" name="tx_sparqltoucan_web_sparqltoucansparqlbackend[__referrer][@vendor]" value="Ubl">
                     <input type="hidden" name="tx_sparqltoucan_web_sparqltoucansparqlbackend[__referrer][@controller]" value="Backend">
