baby steps towards parent/child entries, some things still wont work properly

--- a/index.html
+++ b/index.html
@@ -48,6 +48,36 @@
                                 <em>[static]</em>
                                 <input type="hidden" name="tx_sparqltoucan_web_sparqltoucansparqlbackend[editCollectioNRearrange][38]" value="6    /   1   /  7  / 3">
                             </div>
+
+                            <div style="grid-area: 7 / 3 / 8 / 4;" class="tou_target_field">
+                                <div class="tou_containment" style="width: 164px; height: 34px;">
+                                    <div class="tou_corner_lt"></div>
+                                    <div class="tou_border_t"></div>
+                                    <div class="tou_corner_rt"></div>
+                                    <div class="tou_border_l"></div>
+                                    <div class="tou_content_box" style="width: 150px; height: 20px; display: flex;">
+                                        <div class=tou_content_parallel_left></div>
+                                        <div style="width:65">
+                                            Entenhausen
+                                            <em>&gt;&gt; .org/addressLocality</em>
+                                            <input type="hidden" name="tx_sparqltoucan_web_sparqltoucansparqlbackend[editCollectioNRearrange][29]" value="4 / 3 / 5 / 4">
+                                        </div>
+                                        <div class="tou_content_parallel_middle"></div>
+                                        <div style="width: 65px;">
+                                            Entenhausen
+                                            <em>&gt;&gt; .org/addressLocality</em>
+                                            <input type="hidden" name="tx_sparqltoucan_web_sparqltoucansparqlbackend[editCollectioNRearrange][29]" value="4 / 3 / 5 / 4">
+                                        </div>
+                                        <div class="tou_content_parallel_right"></div>
+                                        
+                                    </div>
+                                    <div class="tou_border_r"></div>
+                                    <div class="tou_corner_lb"></div>
+                                    <div class="tou_border_b"></div>
+                                    <div class="tou_corner_rb"></div>
+                                </div>
+                            </div>
+
                         </div>
                     </div>
             </div>
